--- a/templates/finder/_files_list.html.twig
+++ b/templates/finder/_files_list.html.twig
@@ -11,7 +11,7 @@
     </tr>
     </thead>
 
-    {% for file in finder.files() %}
+    {% for file in finder %}
 
         {% set extension = file.extension() %}
         {% set filename = path ~ file.getRelativePathname() %}
