--- a/assets/scss/modules/base/_tables.scss
+++ b/assets/scss/modules/base/_tables.scss
@@ -1,4 +1,13 @@
 table.table-compact {
+
+  th:first-of-type, td:first-of-type {
+    padding-left: 0.8rem;
+  }
+
+  th:last-of-type, td:last-of-type {
+    padding-right: 0.8rem;
+  }
+
   th, td {
     padding: 0.3rem;
   }
