Adding proper ids to tables

--- a/templates/finder/_files_cards.html.twig
+++ b/templates/finder/_files_cards.html.twig
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" id="files-cards">
     {% for file in finder %}
 
         {% set extension = file.extension() %}
