--- a/templates/finder/_files_list.html.twig
+++ b/templates/finder/_files_list.html.twig
@@ -1,5 +1,5 @@
 
-<table class="table table-striped table-compact" style="background-color: #FFF;">
+<table class="table table-striped table-compact" id="files-list" style="background-color: #FFF;">
     <thead class="thead-light">
     <tr>
         <th></th>
