--- a/templates/finder/_folders.html.twig
+++ b/templates/finder/_folders.html.twig
@@ -1,4 +1,4 @@
-<table class="table table-striped table-compact" style="background-color: #FFF;">
+<table class="table table-striped table-compact" id="files-folders" style="background-color: #FFF;">
     <thead class="thead-light">
     <tr>
         <th><i class="fas fa-folder"></i> {{ 'caption.folders'|trans }}</th>
