Adding spinners and disabling buttons to indicate the user might have to wait a few seconds

--- a/templates/content/_buttons.html.twig
+++ b/templates/content/_buttons.html.twig
@@ -2,7 +2,7 @@
 
 <div class="record-actions">
 
-    {{ macro.button('action.save', 'fa-save', 'success', {'type': 'submit', 'form': 'editcontent'}) }}
+    {{ macro.button('action.save', 'fa-save', 'success', {'type': 'submit', 'form': 'editcontent', 'data-patience': 'virtue'}) }}
 
     {% if record.id %}
         <div class="btn-group">
