--- a/templates/content/listing.html.twig
+++ b/templates/content/listing.html.twig
@@ -52,7 +52,7 @@
         </div>
         <div class="card-body">
             <p>
-                <a class="btn btn-primary" href="{{ path('bolt_content_new', { contentType: contentType.slug }) }}">
+                <a class="btn btn-primary" href="{{ path('bolt_content_new', { contentType: contentType.slug }) }}" data-patience="virtue">
                     {{ macro.icon('magic') }} {{ __('action.create_new') }} {{ contentType.singular_name }}
                 </a>
             </p>
