Fix capitalisation in groups

--- a/templates/content/_tabs.html.twig
+++ b/templates/content/_tabs.html.twig
@@ -1,13 +1,15 @@
+{% apply spaceless %}
 <nav>
     <ul class="nav editor__tabbar" role="tablist">
         {% for group in groups %}
             <li class="nav-item">
-                <a class="nav-link {% if loop.first %}active{% endif %}" id="{{group|slug}}-tab" data-toggle="pill"
-                   href="#{{group|slug}}" role="tab" aria-controls="{{group|slug}}"
-                   aria-selected="{% if loop.first %}true{%else%}false{% endif %}">
-                    <span>{{group|capitalize}}</span>
+                <a class="nav-link {% if loop.first %} active{% endif %} " id="{{ group|slug }} -tab" data-toggle="pill"
+                   href="#{{ group|slug }} " role="tab" aria-controls="{{ group|slug }} "
+                   aria-selected="{% if loop.first %} true{% else %} false{% endif %} ">
+                    <span>{{ group }} </span>
                 </a>
             </li>
-        {% endfor %}
+        {%  endfor  %} 
     </ul>
 </nav>
+{% endapply %}
