Update to add `title_case`

--- a/templates/content/_tabs.html.twig
+++ b/templates/content/_tabs.html.twig
@@ -6,7 +6,7 @@
                 <a class="nav-link {% if loop.first %} active{% endif %} " id="{{ group|slug }} -tab" data-toggle="pill"
                    href="#{{ group|slug }} " role="tab" aria-controls="{{ group|slug }} "
                    aria-selected="{% if loop.first %} true{% else %} false{% endif %} ">
-                    <span>{{ group }} </span>
+                    <span>{{ group|title_case }} </span>
                 </a>
             </li>
         {%  endfor  %} 
