--- a/templates/content/_buttons.html.twig
+++ b/templates/content/_buttons.html.twig
@@ -1,7 +1,6 @@
 {% import '@bolt/_macro/_macro.html.twig' as macro %}
 
-<div class="record-actions">
-
+<div class="record-actions {% if hide_on_mobile|default(false) %}d-lg-none d-xl-block{% endif %}">
     {{ macro.button('action.save', 'fa-save', 'success', {'type': 'submit', 'form': 'editcontent', 'data-patience': 'virtue'}) }}
 
     {% if record.id %}
