Adding tests for Global Search

--- a/templates/content/listing.html.twig
+++ b/templates/content/listing.html.twig
@@ -100,7 +100,7 @@
                     #}
                     <p>
                         <strong>{{ 'listing.title_filterby'|trans }}</strong>:
-                        <input class="form-control" type="text" name="filter" value="{{ filterValue }}"
+                        <input class="form-control" type="text" name="filter" id="content-filter" value="{{ filterValue }}"
                                placeholder="{{ 'listing.placeholder_filter'|trans }}"/>
                     </p>
                 </div>
