--- a/templates/content/_localeswitcher.html.twig
+++ b/templates/content/_localeswitcher.html.twig
@@ -1,6 +1,6 @@
 {% import '@bolt/_macro/_macro.html.twig' as macro %}
 
-{% if record.id and currentlocale %}
+{% if record.id and locales.count > 1 %}
     <div class="card mb-3">
         <div class="card-header">
             {{ macro.icon('language') }}
