Better UI for dragging in multiselect

--- a/assets/scss/modules/editor/fields/_multiselect.scss
+++ b/assets/scss/modules/editor/fields/_multiselect.scss
@@ -1,3 +1,15 @@
-.multiselect__tag__drag {
-  display: inline-flex;
+.multiselect__tag {
+  &__drag {
+    display: inline-flex;
+  }
+
+  border: 1px dashed transparent;
+
+  &.dragover {
+    border-color: $bolt-bluegray;
+  }
+
+  &.dragging {
+    opacity: 0.25;
+  }
 }
