--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -32,14 +32,17 @@
     <p>The ongoing Bolt development takes place under the care of:</p>
     <ul>
         <li><a href="https://twokings.nl/" target="_blank">Two Kings</a> &ndash; Artisinal Web Development.</li>
-        <li><a href="https://tsh.io/" target="_blank">The Software House</a> &ndash; Web and Mobile Development.</li>
     </ul>
 
     <p>Sponsors:</p>
     <ul>
-        <li><a href="https://www.webfwd.co.uk/" target="_blank">Webforward, Richard Leishman</a> </li>
         <li><small>→ You and/or your company's name on this list? <a href="https://github.com/users/bobdenotter/sponsorship">Become a sponsor</a>.</small></li>
     </ul>
+
+{# Previous collaborators / sponsors: 
+        <li><a href="https://tsh.io/" target="_blank">The Software House</a> &ndash; Web and Mobile Development.</li>
+        <li><a href="https://www.webfwd.co.uk/" target="_blank">Webforward, Richard Leishman</a> </li>
+#}
 
     <p>
         All parts of Bolt are free to use under the open-source MIT license. The full licensing text can be
