--- a/templates/_macro/_macro.html.twig
+++ b/templates/_macro/_macro.html.twig
@@ -68,9 +68,7 @@
 
             {% include '@bolt/_partials/fields/' ~ item_field.type ~ '.html.twig' with context only %}
         {% endset %}
-        {# set the label manually as set in _base.html.twig, to pass to Collection.vue for templates #}
-        {% set label = item_field.definition.label|default(item_field.name|default('unnamed')|ucwords) %}
-        {% set fieldsHtml = fieldsHtml|merge([{'html': new_field, 'hash': hash, 'label': label}]) %}
+        {% set fieldsHtml = fieldsHtml|merge([{'html': new_field, 'hash': hash}]) %}
     {% endfor %}
     {{ fieldsHtml|json_encode }}
 {% endapply %}{% endmacro %}
