Add ctrl+s on other pages (media/users/profile)

--- a/templates/media/edit.html.twig
+++ b/templates/media/edit.html.twig
@@ -92,7 +92,7 @@
     </div>
 
 
-    {{ macro.button('action.save', 'fa-save', 'success', {'type': 'submit', 'form': 'editcontent'}) }}
+    {{ macro.button('action.save', 'fa-save', 'success', {'type': 'submit', 'form': 'editcontent', 'name': 'save'}) }}
 
 </form>
 
