--- a/templates/users/profile.html.twig
+++ b/templates/users/profile.html.twig
@@ -100,7 +100,7 @@
             <theme-select></theme-select>
             #}
 
-            {{ macro.button('action.save', 'fa-save', 'primary', {'type': 'submit', 'form': 'editcontent'}) }}
+            {{ macro.button('action.save', 'fa-save', 'primary', {'type': 'submit', 'form': 'editcontent', 'name': 'save'}) }}
 
 
         </form>
