--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -112,7 +112,7 @@
             <theme-select></theme-select>
             #}
 
-            {{ macro.button('action.save', 'fa-save', 'primary', {'type': 'submit', 'form': 'editcontent'}) }}
+            {{ macro.button('action.save', 'fa-save', 'primary', {'type': 'submit', 'form': 'editcontent', 'name': 'save'}) }}
 
         </form>
     </div>
