Paginate users listing

--- a/templates/users/listing.html.twig
+++ b/templates/users/listing.html.twig
@@ -94,6 +94,8 @@
         </tbody>
     </table>
 
+    {{ pager(users, template = '@bolt/helpers/_pager_bootstrap.html.twig', class="justify-content-center") }}
+
 {% endblock %}
 
 
