Display Symfony version in "About" and `bolt:info` screens

--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -20,6 +20,7 @@
         <li>Install type: <code>{{ installType }}</code></li>
         <li>Database: <code>{{ platform.driver_name }} {{ platform.server_version }} <small> - {{ platform.connection_status }}</small> </code></li>
         <li>PHP version: <code>{{ php }}</code></li>
+        <li>Symfony version: <code>{{ symfony }}</code></li>
         <li>Operating System: <code>{{ os_name }} - <small>{{ os_version }}</small></code></li>
     </ul>
     <hr>
