--- a/templates/content/_fields_aside_summary.html.twig
+++ b/templates/content/_fields_aside_summary.html.twig
@@ -6,7 +6,8 @@
             'label' : 'field.createdAt'|trans,
             'name' : 'createdAt',
             'value' : record.createdAt,
-            'valueonly' : true
+            'valueonly' : true,
+            'locale': app.user.locale
         } %}
         </li>
 
@@ -15,7 +16,8 @@
             'label' : 'field.modifiedAt'|trans,
             'name' : 'modifiedAt',
             'value' : record.modifiedAt,
-            'valueonly' : true
+            'valueonly' : true,
+            'locale': app.user.locale
         } %}
         </li>
 
@@ -24,7 +26,8 @@
             'label' : 'field.id'|trans,
             'name' : 'id',
             'value' : record.id,
-            'valueonly' : true
+            'valueonly' : true,
+            'locale': app.user.locale
         } %}
         </li>
     </ul>
