--- a/templates/_partials/fields/date.html.twig
+++ b/templates/_partials/fields/date.html.twig
@@ -36,7 +36,7 @@
     :errormessage='{{ errormessage|json_encode }}'
   ></editor-date>
   {% else %}
-    {{ value|localedatetime('%B %e, %Y - %H:%M<small>%p</small>') }}
+    {{ value|localedatetime(format|default(null), locale|default(null)) }}
       <small>({{ macro.relative_datetime(value) }})</small>
   {% endif %}
   
