--- a/public/theme/skeleton/partials/_aside.twig
+++ b/public/theme/skeleton/partials/_aside.twig
@@ -42,9 +42,9 @@
     </div>
 
     {# The next section iterates over all of the content types, and prints a list
-        of the five latest records of each of them. The 'magic' happens in the
-        setcontent tag.. ct.slug ~ "/latest/3" concatenates the slug of the
-        content type with /latest/3, so it becomes something like "pages/latest/3".
+        of the three latest records of each of them. The 'magic' happens in the
+        setcontent tag.. 'ct.slug latest limit 3' fetches 3 records with the given
+        ContentType, ordered by their descending id.
         The 'else' in the inner for-loop is only used if there are no 'records',
         so we can use it to print a helpful message.
         Lastly, "path('listing', {'contentTypeSlug': ct.slug})" will output something like '/pages',
@@ -52,7 +52,7 @@
 
     {% for ct in config.get('contenttypes')|filter(ct => not ct.viewless) %}
 
-        {% setcontent records = ct.slug ~ "/latest/3" %}
+        {% setcontent records = ct.slug latest limit 3 %}
 
         <h5>{{ __('contenttypes.generic.recent', {'%contenttypes%': ct.name}) }}</h5>
         {% if records|length %}
