Put `localedatetime` with previous format and deprecated notice. User `localdate` with new format

--- a/templates/_macro/_macro.html.twig
+++ b/templates/_macro/_macro.html.twig
@@ -77,7 +77,7 @@
 
 
 {% macro relative_datetime(datetime) %}{% apply spaceless %}
-    <abbr class="datetime-relative" title="{{ datetime|localedatetime }}">
+    <abbr class="datetime-relative" title="{{ datetime|localdate }}">
         {{- datetime|date('c') -}}
     </abbr>
 {% endapply %}{% endmacro %}
