Allow for extensions to add new FieldTypes

--- a/templates/content/_fields.html.twig
+++ b/templates/content/_fields.html.twig
@@ -17,8 +17,11 @@
             {% endif %}
 
             {% if not field.definition.hidden %}
+                {# Three-step include: first try a 'built-in' fieldtype, then a field added by
+                an Extension, and fall back to 'generic' field type #}
                 {% include [
                     '@bolt/_partials/fields/' ~ fielddefinition.type ~ '.html.twig',
+                    '@' ~ fielddefinition.type ~ '/' ~ fielddefinition.type ~ '.html.twig',
                     '@bolt/_partials/fields/generic.html.twig'
                     ] with { 'field' : field } %}
             {% endif %}
