--- a/public/theme/skeleton/partials/_sub_menu.twig
+++ b/public/theme/skeleton/partials/_sub_menu.twig
@@ -14,7 +14,7 @@
         {{ loop.first ? ' first' -}}
         {{ loop.last ? ' last' -}}
         {{ with_submenu ? ' has-submenu' -}}
-        {{ item.current ? ' active' }}">
+        {{ item|current ? ' active' }}">
 
         <a href="{{ item.uri }}" title='{{ item.title }}' class='{{ item.class }}'>
             {{- item.label -}}
